# Eendgine

./: .clang-format  .gitignore  CMakeLists.txt  Eendgine  Makefile  README.md  \  animation.cpp  animation.hpp  audio.cpp  audio.hpp  board.cpp  board.hpp  camera.cpp  camera.hpp  cmake_install.cmake  collisionGeometry.cpp  collisionGeometry.hpp  compile.sh  compile_flags.txt  doll.cpp  doll.hpp  entityBatch.hpp  entityBatches.cpp  entityBatches.hpp  fatalError.cpp  fatalError.hpp  frameLimiter.cpp  frameLimiter.hpp  game.out  info.cpp  info.hpp  inputManager.cpp  inputManager.hpp  loadModel.cpp  loadModel.hpp  main.cpp  model.cpp  model.hpp  panel.cpp  (+32 more)
eendgine/: animatedModel.cpp  camera2D.cpp  camera3D.cpp  collision.cpp  fatalError.cpp  frameLimiter.cpp  frameTime.cpp  inpolMesh.cpp  inpolModel.cpp  inputManager.cpp  lerpMesh.cpp  lerpModel.cpp  mesh.cpp  model.cpp  shader.cpp  sprite.cpp  texture.cpp  textureCache.cpp  window.cpp
include/eendgine/: animatedModel.hpp  camera2D.hpp  camera3D.hpp  collision.hpp  fatalError.hpp  frameLimiter.hpp  frameTime.h  frameTime.hpp  inpolMesh.hpp  inpolModel.hpp  inputManager.hpp  lerpMesh.hpp  lerpModel.hpp  mesh.hpp  model.hpp  shader.hpp  sprite.hpp  sprite3D.hpp  texture.hpp  textureCache.hpp  vertex.hpp  window.hpp
include/glad/: glad.h
lib/Simple-SDL2-Audio/: CMakeLists.txt
lib/eendgine/: CMakeLists.txt  animatedModel.cpp  animatedModel.hpp  camera.cpp  camera.hpp  camera2D.cpp  camera2D.hpp  camera3D.cpp  camera3D.hpp  collision.hpp  collisionGeometry.cpp  collisionGeometry.hpp  drawBatch.cpp  drawBatch.hpp  entityBatch.hpp  entityBatches.cpp  entityBatches.hpp  fatalError.cpp  fatalError.hpp  frameLimiter.cpp  frameLimiter.hpp  info.cpp  info.hpp  inpolMesh.cpp  inpolMesh.hpp  inpolModel.cpp  inpolModel.hpp  inputManager.cpp  inputManager.hpp  loadModel.cpp  loadModel.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  modelBatch.cpp  modelBatch.hpp  newDrawBatch.hpp  random.cpp  random.hpp  (+16 more)
lib/glad/: CMakeLists.txt  README.txt  (+1 more)
shaders/: shader.frag  shader.vert  shader1.frag  shader3D.frag  shader3D.vert  shaderInpol.vert  shaderLerp.vert  shaderScreen.frag
src/: ball.cpp  ball.hpp  cameras.hpp  court.cpp  court.hpp  drawBatches.cpp  drawBatches.hpp  main.cpp  player.cpp  player.hpp  shaders.cpp  shaders.hpp
(+11 files in other folders)
